Update system. - rbw: Increase timeout before lock; don't force unlock/sync every shell launch - disable iscsi, smb - install comma - add mangohud config for splitgate 2 - disable obs-studio v4l2loopback (virtual camera) until the kernel module is available for cachyos kernel 6.15 - fix credentials path for smb

--- a/services/caddy/docker-compose.yml
+++ b/services/caddy/docker-compose.yml
@@ -6,18 +6,27 @@ services:
     ports:
       - "80:80"
       - "443:443"
+      - "4433:4433"
     networks:
-      - reverse-proxy
+      - caddy
     environment:
-      - CADDY_INGRESS_NETWORKS=reverse-proxy
+      - CADDY_INGRESS_NETWORKS=caddy
     volumes:
-      - ./Caddyfile:/etc/caddy/Caddyfile
-      - caddy_data:/data
       - /var/run/docker.sock:/var/run/docker.sock
+    labels:
+      caddy.email: "joey@jafner.net"
+  nginx:
+    image: nginx
+    container_name: nginx
+    networks:
+      - caddy
+    labels:
+      caddy: test2.jafner.net:4433
+      caddy.tls: internal
+      caddy.reverse_proxy: "{{upstreams 80}}"
 
 networks:
-  reverse-proxy:
-    external: true
+  caddy:
+    name: caddy
 
-volumes:
-  caddy_data:
+
